# VeneriX_SDK

./: App.cpp  CMakeLists.txt  LICENSE  README.md
VeneriX_SDK/include/: Application.h  Audio.h  Camera.h  Component.h  Core.h  Entity.h  EntryPoint.h  Input.h  Player.h  Renderer.h  Scene.h  StarterPlayer.h  Texture2D.h  TimeStep.h  VeneriX.h
VeneriX_SDK/lib/: venerix.lib
